--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-color: black;
+    background-color: #222222;
 }
 
 /* TOPO/LOGO */
@@ -31,65 +31,61 @@ header img {
 /* PRINCIPAL/PRODUTOS */
 
 main {
-    background-color: black;
-    margin: auto;
+    margin: 25px auto;
+    border-radius: 15px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    row-gap: 15px;
-    padding: 15px;
+    row-gap: 20px;
     width: 280px;
 }
 
 /* CONTAINER DOS PRODUTOS */
 
 .container-product {
-    background-color: white;
     width: 250px;
     height: 300px;
     transition: .3s;
+    box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.309);
 }
 
-.container-product:hover {
-    height: 308px;
-    margin: 10px 0px;
-}
-
-.container-product .father-div-img {
-    height: 85%;
-    padding: 1px;
+.container-product:hover img {
+    width: 220px;
+    height: 220px;
 }
 
 .div-img { /* DIV QUE TEM COMO FILHO O <img> */
+    background-color: rgb(255, 255, 255);
+    height: 85%;
     display: flex;
     justify-content: center;
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px 5px 0px 0px;
 }
 
 .div-img img {
-    width: 100%; 
+    width: 210px;
+    height: 210px;
     object-fit: cover;
+    transition: .3s;
 }
 
 .div-a-button { /* DIV QUE TEM COMO FILHO O <a> */
     height: 15%;
-    border: 1px solid white;
-    border-top: none;
-    background-color: white;
-    transition: .3s;
+    background-color: #00a000;
+    border-radius: 0px 0px 5px 5px;
 }
 
 .div-a-button:hover {
-    background-color: rgba(206, 206, 206, 0.589);
-}
-
-.div-a-button:hover a {
-    color: rgba(49, 45, 45, 0.89);
+    background-color: #008f00;
 }
 
 .div-a-button a {
-    color: black;
+    font-size: 0.9em;
+    color: rgb(255, 255, 255);
     width: 100%;
     height: 100%;
     display: flex;
