--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -17,15 +17,18 @@ body {
 /* TOPO/LOGO */
 
 header {
-    background-color: white;
+    background-color: rgb(255, 255, 255);
     height: 50px;
     text-align: center;
     vertical-align: middle;
     padding: 5px;
+    box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.209);
 }
 
 header img {
     height: 40px;
+    border-radius: 11px;
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.091);
 }
 
 /* PRINCIPAL/PRODUTOS */
@@ -45,21 +48,15 @@ main {
 
 .container-product {
     width: 250px;
-    height: 300px;
+    height: 340px;
     transition: .3s;
+    border-radius: 5px;
     box-shadow: 0px 0px 8px 2px rgba(0, 0, 0, 0.309);
-}
-
-.container-product:hover img {
-    width: 220px;
-    height: 220px;
 }
 
 .div-img { /* DIV QUE TEM COMO FILHO O <img> */
     background-color: rgb(255, 255, 255);
-    height: 85%;
-    display: flex;
-    justify-content: center;
+    height: 70%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -67,20 +64,41 @@ main {
 }
 
 .div-img img {
-    width: 210px;
-    height: 210px;
+    width: 215px;
+    height: 200px;
     object-fit: cover;
     transition: .3s;
 }
 
+.div-pm {
+    border-top: 1px solid #ebebeb;
+    background-color: rgb(255, 255, 255);
+    height: 15%;
+    width: 100%;
+    padding: 10px 6px;
+    display: flex;
+
+
+}
+
+.div-pm p {
+    color: #6f7a82;
+    font-size: 0.95em;
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    word-break: break-all;
+    hyphens: auto;
+}
+
 .div-a-button { /* DIV QUE TEM COMO FILHO O <a> */
     height: 15%;
-    background-color: #00a000;
+    background-color: #48d4ff;
     border-radius: 0px 0px 5px 5px;
+    transition: .3s;
 }
 
 .div-a-button:hover {
-    background-color: #008f00;
+    background-color: #42caf3;
 }
 
 .div-a-button a {
@@ -91,7 +109,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    transition: .3s;
     font-family: 'Open Sans', sans-serif;
 }
 
@@ -119,7 +136,7 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center;
-    border-right: 1px solid rgba(145, 141, 141, 0.89);
+    border-right: 1px solid rgba(126, 124, 124, 0.89);
 }
 
 .div-footer-img img {
