--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -31,6 +31,35 @@ header img {
     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.091);
 }
 
+.search-container {
+    width: 250px;
+    margin: 20px auto;
+    text-align: center;
+}
+
+.search-container input {
+    width: 100%;
+    height: 38px;
+    padding: 4px 9px;
+    border-radius: 5px;
+    outline: none;
+    font-size: 0.9em;
+    color: rgba(126, 124, 124, 0.89);
+    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.061);
+}
+
+input[type="search"]::-webkit-search-cancel-button {
+    -webkit-appearance: none;
+    height: 13px;
+    width: 13px;
+    background-image: url("../img/cancelar-icon.png") ;
+    background-size: 13px;
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+    border: none;
+}
+
 /* PRINCIPAL/PRODUTOS */
 
 main {
@@ -41,7 +70,8 @@ main {
     justify-content: center;
     align-items: center;
     row-gap: 20px;
-    width: 280px;
+    width: 250px;
+
 }
 
 /* CONTAINER DOS PRODUTOS */
@@ -77,8 +107,6 @@ main {
     width: 100%;
     padding: 10px 6px;
     display: flex;
-
-
 }
 
 .div-pm p {
@@ -88,6 +116,10 @@ main {
     overflow-wrap: break-word;
     word-break: break-all;
     hyphens: auto;
+}
+
+.description-product {
+    display: none;
 }
 
 .div-a-button { /* DIV QUE TEM COMO FILHO O <a> */
@@ -144,15 +176,30 @@ footer {
     object-fit: cover;
 }
 
-.div-p {
+.container-p-social {
     width: 65%;
     height: 100%;
     display: flex;
-    align-items: center;
+    flex-direction: column;
     padding-left: 20px;
+}
+
+.div-p {
+    height: 30%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
 }
 
 .div-p p {
     color: rgba(145, 141, 141, 0.89);
     font-size: 0.7em;
+}
+
+.div-medias-social {
+    height: 70%;
+    display: flex;
+    align-items: center;
+    justify-content: start;
+    column-gap: 15px;
 }
