--- a/styles/medias-queries.css
+++ b/styles/medias-queries.css
@@ -8,12 +8,23 @@
     }
 
     .div-footer-img {
-        width: 40%;
+        width: 30%;
+    }
+
+    .container-p-social {
+        width: 70%;
+        flex-direction: row;
+        column-gap: 20px;
     }
 
     .div-p {
-        width: 60%;
+        height: 100%;
     }
+
+    .div-medias-social {
+        height: 100%;
+    }
+
 }
 
 @media (min-width: 600px) {
@@ -23,6 +34,10 @@
 
     header img {
         height: 50px;
+    }
+
+    .search-container {
+        width: 520px;
     }
 
     main {
@@ -37,13 +52,34 @@
     .container-footer {   
         height: 55px;
     }
+    
+    .container-p-social {
+        flex-direction: row;
+        column-gap: 20px;
+    }
+    
+    .div-p {
+        height: 100%;
+    }
 
     .div-p p {
         font-size: 0.71em;
     }
+    
+    .div-medias-social {
+        height: 100%;
+    }
+
+    .div-medias-social a img {
+        width: 25px;
+    }
 }
 
 @media (min-width: 768px) {
+    .search-container {
+        width: 736px;
+    }
+
     main {
         row-gap: 35px;
         column-gap: 23px;
@@ -59,6 +95,19 @@
         width: 190px;
         height: 190px;
     }
+
+    .container-p-social {
+        flex-direction: row;
+        column-gap: 20px;
+    }
+
+    .div-p {
+        height: 100%;
+    }
+
+    .div-medias-social {
+        height: 100%;
+    }
 }
 
 @media (min-width: 900px) {
@@ -68,6 +117,10 @@
 
     header img {
         height: 53px;
+    }
+
+    .search-container {
+        width: 860px;
     }
 
     main {
@@ -94,8 +147,25 @@
         height: 58px;
     }
 
+    .container-p-social {
+        flex-direction: row;
+        column-gap: 20px;
+    }
+
+    .div-p {
+        height: 100%;
+    }
+    
     .div-p p {
         font-size: 0.72em;
+    }
+
+    .div-medias-social {
+        height: 100%;
+    }
+
+    .div-medias-social a img {
+        width: 26px;
     }
 }
 
@@ -104,10 +174,14 @@
         background-color: #ebebeb;
     }
 
+    .search-container {
+        width: 920px;
+    }
+
     main {
         row-gap: 30px;
         column-gap: 20px;
-        width: 950px;
+        width: 920px;
     }
 
     .container-product {
@@ -120,6 +194,20 @@
         width: 195px;
         height: 205px;
     }
+
+    .container-p-social {
+        flex-direction: row;
+        column-gap: 20px;
+    }
+
+    .div-p {
+        height: 100%;
+    }
+
+    .div-medias-social {
+        height: 100%;
+    }
+
 }
 
 @media (min-width: 1200px) {
@@ -129,6 +217,10 @@
 
     header img {
         height: 57px;
+    }
+
+    .search-container {
+        width: 1155px;
     }
 
     main {
@@ -141,6 +233,20 @@
         width: 195px;
         height: 215px;
     }
+
+    .container-p-social {
+        flex-direction: row;
+        column-gap: 20px;
+    }
+
+    .div-p {
+        height: 100%;
+    }
+
+    .div-medias-social {
+        height: 100%;
+    }
+
 }
 
 @media (min-width: 1700px) {
@@ -150,6 +256,10 @@
 
     header img {
         height: 60px;
+    }
+
+    .search-container {
+        width: 1370px;
     }
 
     main {
@@ -172,17 +282,31 @@
     footer {
         height: 66px;
     }
+    
+    .div-footer-img {
+        width: 30%;
+    }
+
+    .container-p-social {
+        width: 70%;
+        padding-left: 30px;
+        flex-direction: row;
+        column-gap: 20px;
+    }
+    
+    .div-p {
+        height: 100%;
+    }
 
     .div-p p {
         font-size: 0.72em;
     }
 
-    .div-footer-img {
-        width: 30%;
+    .div-medias-social {
+        height: 100%;
     }
 
-    .div-p {
-        width: 70%;
-        padding-left: 30px;
+    .div-medias-social a img {
+        width: 26px;
     }
 }
