--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -12,6 +12,9 @@
 
 body {
     background-color: #222222;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
 }
 
 /* TOPO/LOGO */
@@ -63,15 +66,13 @@ input[type="search"]::-webkit-search-cancel-button {
 /* PRINCIPAL/PRODUTOS */
 
 main {
-    margin: 25px auto;
+    margin: 25px auto 35px auto;
     border-radius: 15px;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     row-gap: 20px;
     width: 250px;
-
+    flex: 1;
 }
 
 /* CONTAINER DOS PRODUTOS */
