--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -36,7 +36,7 @@ header img {
 
 .search-container {
     width: 250px;
-    margin: 20px auto;
+    margin: 25px auto 0px auto;
     text-align: center;
 }
 
