--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -1,6 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
+
 :root {
     --Open-Sans: 'Open Sans', sans-serif;
+    --Poppins: 'Poppins', sans-serif;
 }
 
 * {
@@ -25,35 +28,48 @@ body {
 header {
     background-color: rgb(255, 255, 255);
     height: 50px;
-    text-align: center;
-    vertical-align: middle;
     padding: 5px;
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.209);
+    position: sticky;
+    top: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-header img {
+.header-container-img-search {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 9999px;
+}
+
+.div-a-img-h a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.div-a-img-h a img {
     height: 40px;
-    border-radius: 11px;
-    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.091);
+    filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.091));
 }
 
 .search-container {
-    width: 250px;
-    margin: 25px auto 0px auto;
-    text-align: center;
-    position: sticky;
-    top: 0px;
+    width: 68%;
 }
 
 .search-container input {
     width: 100%;
     height: 38px;
     padding: 4px 9px;
-    border-radius: 5px;
+    border-radius: 3px;
     outline: none;
-    font-size: 0.9em;
+    font-size: 1em;
+    font-family: var(--Poppins);
+    font-weight: 500;
+    border: 1px solid #ebebeb;
     color: rgba(126, 124, 124, 0.89);
-    box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.061);
 }
 
 input[type="search"]::-webkit-search-cancel-button {
