--- a/styles/medias-queries.css
+++ b/styles/medias-queries.css
@@ -1,4 +1,8 @@
 @media (min-width: 420px) {
+    .header-container-img-search {
+        width: 9999px;
+    }
+
     .div-footer-img-p {
         width: 36%;
     }
@@ -13,8 +17,8 @@
         height: 55px;
     }
 
-    header img {
-        height: 45px;
+    .div-a-img-h a img {
+        height: 42px;
     }
 
     .div-footer-img-p {
@@ -54,16 +58,13 @@
         height: 60px;
     }
 
-    header img {
-        height: 50px;
-    }
-
-    .search-container {
-        width: 520px;
+    .div-a-img-h a img {
+        height: 45px;
     }
 
     main {
         column-gap: 20px;
+        row-gap: 30px;
         width: 520px;
     }
 
@@ -88,12 +89,8 @@
 }
 
 @media (min-width: 768px) {
-    .search-container {
-        width: 736px;
-    }
-
     main {
-        row-gap: 35px;
+        row-gap: 37px;
         column-gap: 23px;
         width: 736px;
     }
@@ -123,15 +120,11 @@
 
 @media (min-width: 900px) {
     header {
-        height: 63px;
+        height: 65px;
     }
 
-    header img {
-        height: 53px;
-    }
-
-    .search-container {
-        width: 860px;
+    .div-a-img-h a img {
+        height: 45px;
     }
 
     main {
@@ -147,7 +140,7 @@
 
     .div-img img {
         width: 230px;
-        height: 230px;
+        height: 210px;
     }
 
     .div-footer-img-p img {
@@ -158,10 +151,6 @@
 @media (min-width: 991px) {
     body {
         background-color: #ebebeb;
-    }
-
-    .search-container {
-        width: 920px;
     }
 
     main {
@@ -177,8 +166,8 @@
     }
 
     .div-img img {
-        width: 195px;
-        height: 205px;
+        width: 185px;
+        height: 195px;
     }
 }
 
@@ -187,12 +176,12 @@
         height: 67px;
     }
 
-    header img {
-        height: 57px;
+    .header-container-img-search {
+        width: 1320px;
     }
-
-    .search-container {
-        width: 1155px;
+    
+    .div-a-img-h a img  {
+        height: 47px;
     }
 
     main {
@@ -208,16 +197,9 @@
 }
 
 @media (min-width: 1700px) {
-    header {
-        height: 70px;
-    }
 
-    header img {
-        height: 60px;
-    }
-
-    .search-container {
-        width: 1370px;
+    .header-container-img-search {
+        width: 1575px;
     }
 
     main {
