--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -4,6 +4,7 @@
 :root {
     --Open-Sans: 'Open Sans', sans-serif;
     --Poppins: 'Poppins', sans-serif;
+    --back-white: white;
 }
 
 * {
@@ -26,7 +27,7 @@ body {
 /* TOPO/LOGO */
 
 header {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--back-white);
     height: 50px;
     padding: 5px;
     box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.209);
@@ -44,14 +45,19 @@ header {
     width: 9999px;
 }
 
-.div-a-img-h a {
+.div-a-img-h {
+    height: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
+.div-a-img-h a {
+    height: 100%;
+}
+
 .div-a-img-h a img {
-    height: 40px;
+    height: 100%;
     filter: drop-shadow(0px 0px 4px rgba(0, 0, 0, 0.091));
 }
 
@@ -113,7 +119,7 @@ main {
 }
 
 .div-img { /* DIV QUE TEM COMO FILHO O <img> */
-    background-color: rgb(255, 255, 255);
+    background-color: var(--back-white);
     height: 66%;
     display: flex;
     justify-content: center;
@@ -130,7 +136,7 @@ main {
 
 .div-pm {
     border-top: 1px solid #ebebeb;
-    background-color: rgb(255, 255, 255);
+    background-color: var(--back-white);
     height: 20%;
     width: 100%;
     padding: 6px 8px;
@@ -162,7 +168,6 @@ main {
 
 .div-a-button a {
     font-size: 0.9em;
-    color: rgb(255, 255, 255);
     width: 100%;
     height: 100%;
     display: flex;
@@ -175,7 +180,7 @@ main {
 /* FINAL/CONTATO/LOGO */
 
 footer {
-    background-color: rgb(255, 255, 255);
+    background-color: var(--back-white);
     height: 90px;
     display: flex;
     justify-content: center;
@@ -231,10 +236,10 @@ footer {
 
 .div-p-social {
     width: 100%;
+    height: 40%;
     display: flex;
     justify-content: center;
     align-items: end;
-    height: 40%;
 }
 
 .div-p-social p {
