--- a/styles/medias-queries.css
+++ b/styles/medias-queries.css
@@ -17,7 +17,7 @@
         height: 55px;
     }
 
-    .div-a-img-h a img {
+    .div-a-img-h {
         height: 42px;
     }
 
@@ -58,7 +58,7 @@
         height: 60px;
     }
 
-    .div-a-img-h a img {
+    .div-a-img-h {
         height: 45px;
     }
 
@@ -123,7 +123,7 @@
         height: 65px;
     }
 
-    .div-a-img-h a img {
+    .div-a-img-h {
         height: 45px;
     }
 
@@ -180,7 +180,7 @@
         width: 1320px;
     }
     
-    .div-a-img-h a img  {
+    .div-a-img-h  {
         height: 47px;
     }
 
