--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -74,7 +74,7 @@ header {
     padding: 4px 9px;
     border-radius: 3px;
     outline: none;
-    font-size: 1em;
+    font-size: 0.95em;
     font-family: var(--Poppins);
     font-weight: 400;
     border: 1px solid #ebebeb;
@@ -95,8 +95,12 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 input::placeholder {
-    font-size: 0.9em;
+    font-size: 0.95em;
     color: rgba(0, 0, 0, 0.452);
+}
+
+input:focus {
+    font-size: 0.95em;
 }
 
 #search-button {
@@ -156,6 +160,7 @@ nav ul li a {
 
 .active {
     background-color: #8a90972d;
+    border-bottom: 2px solid #48d4ff;
 }
 
 /* PRINCIPAL/PRODUTOS */
