Tentando terminar o algoritimo de pesquisa da search bar

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -349,3 +349,21 @@ footer {
     color: rgba(145, 141, 141, 0.89);
     font-size: 0.7em;
 }
+
+#load-more-div {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+#load-more {
+    background-color: #48d4ff;
+    color: white;
+    padding: 10px;
+    font-size: 1.3em;
+    cursor: pointer;
+    width: 1370px;
+    border-radius: 4px;
+}
