Search bar + Carregar Mais
SearchBar ja está ótima, agora falta resolver algumas coisa do carregar mais, que inclusive ja está bem funcional

--- a/styles/index-style.css
+++ b/styles/index-style.css
@@ -104,7 +104,7 @@ input:focus {
 }
 
 #search-button {
-    background-color: var(--back-white);
+    background-color: transparent;
     border-radius: 50%;
     position: absolute;
     height: 23px;
